--- a/src/index.css
+++ b/src/index.css
@@ -2,15 +2,46 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+
+*,body {
   margin: 0;
   font-family: 'Titillium Web', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  
+
   background-color: black;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+*::-webkit-scrollbar{
+  -webkit-appearance: none;
+  display: none !important;
+}
+*::-webkit-scrollbar-button{
+  display: none !important;
+}
+*::-webkit-scrollbar-thumb{
+  display: none !important;
+}
+*::-webkit-scrollbar-track{
+  display: none !important;
+}
+*::-webkit-scrollbar-track-piece{
+  display: none !important;
+}
+*::-webkit-scrollbar-corner{
+  display: none !important;
+}
+*::-webkit-resizer{
+  display: none !important;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+* {
+  -ms-overflow-style: none !important;  /* IE and Edge */
+  scrollbar-width: none !important;  /* Firefox */
 }
 
 code {
@@ -24,3 +55,5 @@ code {
   background-repeat: no-repeat !important;
   background-size: contain !important;
 }
+
+
