--- a/src/index.css
+++ b/src/index.css
@@ -2,48 +2,51 @@
 @tailwind components;
 @tailwind utilities;
 
-
-*,body {
+*,
+body {
   margin: 0;
-  font-family: 'Titillium Web', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Titillium Web", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
-*::-webkit-scrollbar{
+*::-webkit-scrollbar {
   -webkit-appearance: none;
   display: none !important;
 }
-*::-webkit-scrollbar-button{
+*::-webkit-scrollbar-button {
   display: none !important;
 }
-*::-webkit-scrollbar-thumb{
+*::-webkit-scrollbar-thumb {
   display: none !important;
 }
-*::-webkit-scrollbar-track{
+*::-webkit-scrollbar-track {
   display: none !important;
 }
-
 
 /* Hide scrollbar for IE, Edge and Firefox */
 * {
-  -ms-overflow-style: none !important;  /* IE and Edge */
-  scrollbar-width: none !important;  /* Firefox */
+  -ms-overflow-style: none !important; /* IE and Edge */
+  scrollbar-width: none !important; /* Firefox */
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
-.movie-header{
-  background-image: url('../src/assets/nav_bar.png');
+.movie-header {
+  background-image: url("../src/assets/nav_bar.png");
   background-color: transparent !important;
   background-repeat: no-repeat !important;
   background-size: contain !important;
 }
 
-
+@media screen and (min-width: 450px) {
+  .movie-header {
+    background-repeat: repeat !important;
+  }
+}
